<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ActivityOpciones">

    <TextView
        android:id="@+id/txttitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_titulo"
        android:textAlignment="center"
        android:textColor="#2196F3"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="119dp" />

    <Button
        android:id="@+id/btnoptingresar"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:text="@string/app_btningresar"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="314dp" />

    <Button
        android:id="@+id/btnlist"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:text="@string/app_btnlist"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="374dp" />

</LinearLayout>